2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* exif.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* exif.test: Hooked into the new common test support code.

2005-10-21  Andreas Kupries <andreask@activestate.com>

	* exif.test: Fixed typo.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

Wed Sep 29 15:11:35 2004  Andreas Kupries <andreask@activestate.com>

	* exif.tcl (makerNote): Fixed [Tcllib SF Bug 1028668]. There are
 	* exif.test:            images in the wild which do not provide
	                        AFPoint information in the makerNote Exif
				data. Test suite is new.

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2003-05-09  Andreas Kupries  <andreask@activestate.com>

	* exif.tcl (::exif::makerNote): Added missing logical operator to
	  if condition for field 34. Procheck report.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* exif.tcl:
	* exif.man:
	* pkgIndex.tcl: Fixed bug #614591. Set version of the package to
	  to 1.1.

2003-04-01  Andreas Kupries  <andreask@activestate.com>

	* exif.man:
	* exif.tcl: Applied patch for SF tcllib bug #665737 provided by
	  Tim J. Edwards <timje@users.sourceforge.net>. This not only
	  fixes the bug mentioned above, but also corrects some spelling