@@ -1,3 +1,8 @@
+2006-09-27  Andreas Kupries <andreask@activestate.com>
+
+	* exif.test: [SF Tcllib Bug 1272798]. Using 'format' to get
+	  results with a deterministic precision.
+
 2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* exif.test: More boilerplate simplified via use of test support.
